[tool.poetry] # package metadata for Poetry
name = "order-tracker"
version = "0.1.0"
description = "E-commerce order tracking API"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.0" }
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
PyJWT = "^2.10.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
redis = { extras = ["hiredis"], version = "^5.2.0" }
celery = { extras = ["redis"], version = "^5.4.0" } # distributed task queue
stripe = "^11.0.0"
sentry-sdk = { extras = ["fastapi"], version = "^2.0.0" }
prometheus-fastapi-instrumentator = "^7.0.0"
structlog = "^24.0.0" # structured (JSON) logging

[tool.poetry.group.dev.dependencies] # installed only in dev env
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
ruff = "^0.8.0" # linter + formatter
mypy = "^1.13.0" # static type checker

[build-system] # tells pip how to build package if installed from source
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options] # pytest config
asyncio_mode = "auto" # remove need to write
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
